# RizzoClaw

./: .gitignore  BRAIN.md  CLAUDE.md  Dockerfile  README.md  news.markdown  pyproject.toml  requirements.txt
.agents/skills/agent-memory/: SKILL.md
memories/2026-03-24/: session.md
rizzoclaw/: agent.py  bot.py  config.py  sem_mem.py
